Map added to API

--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -15,5 +15,44 @@
   <%= @location.longitude %>
 </p>
 
+<h3>Nearby Locations</h3>
+<ul>
+<% for location in @location.nearbys(10) %>
+  <li><%= link_to location.address, location %> (<%= location.distance.round(2) %> miles)  </li>
+<% end %>
+</ul>
+
+
+<html>
+  <head>
+    <style>
+       #map {
+        height: 400px;
+        width: 100%;
+       }
+    </style>
+  </head>
+  <body>
+    <h3>Google Maps Location</h3>
+    <div id="map"></div>
+    <script>
+      function initMap() {
+        var uluru = {lat: -25.363, lng: 131.044};
+        var map = new google.maps.Map(document.getElementById('map'), {
+          zoom: 4,
+          center: uluru
+        });
+        var marker = new google.maps.Marker({
+          position: uluru,
+          map: map
+        });
+      }
+    </script>
+    <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD6GgQT_Ns8Rjl6pnXyaPoTxoq0OY2H2TY&callback=initMap">
+    </script>
+  </body>
+</html>
+
 <%= link_to 'Edit', edit_location_path(@location) %> |
 <%= link_to 'Back', locations_path %>
